--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 description = "A simple FDTD implementation in JAX"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "jax>=0.5.0",
+    "jupyterlab>=4.3.5",
+    "matplotlib>=3.10.0",
+]
 
 [build-system]
 requires = ["hatchling"]
