--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fdtd-playground"
 version = "0.1.0"
-description = "A simple FDTD implementation in JAX"
+description = "A simple FDTD playground"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
