--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ dependencies = [
     "jax>=0.5.0",
     "jupyterlab>=4.3.5",
     "matplotlib>=3.10.0",
+    "taichi>=1.7.3",
 ]
+
+[tool.pyright]
+reportInvalidTypeForm = false
+reportAttributeAccessIssue = false
+reportGeneralTypeIssues = false
 
 [build-system]
 requires = ["hatchling"]
