--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ reportGeneralTypeIssues = false
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.scripts]
+start = "fdtd_playground.__main__:main"
