--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "jax>=0.5.0",
     "jupyterlab>=4.3.5",
     "matplotlib>=3.10.0",
+    "numpy>=2.2.3",
+    "scipy>=1.15.2",
     "taichi>=1.7.3",
 ]
 
